Added some styles for the alignment of chat window in widget section.

--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -1,4 +1,5 @@
 
-#sk-holder #sk-container.sk-appear, #sk-holder #sk-container.sk-appear #sk-wrapper {
-              height: 96% !important;
-          }
+#sk-holder #sk-container.sk-appear #sk-wrapper {
+    height: 97% !important;
+    top: 0 !important;
+}
