stopped the click event from the smooch chat header click.

--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -1,5 +1,11 @@
 
 #sk-holder #sk-container.sk-appear #sk-wrapper {
+    /*height: 104% !important;*/
     height: 97% !important;
     top: 0 !important;
+}
+
+
+#sk-holder #sk-container #sk-header .fa {
+    display: none;
 }
