--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -10,6 +10,9 @@
     display: none;
 }
 
+#sk-footer form { -webkit-touch-callout: none !important; }
+#sk-footer form a { -webkit-user-select: none !important; }
+
 .screens .screen.layouticon a, .screens .layoutgrid .layouticon {
     height: 59px !important;
     line-height: 55px !important;
