--- a/widget/assets/css/style.css
+++ b/widget/assets/css/style.css
@@ -1,9 +1,8 @@
 
 #sk-holder #sk-container.sk-appear #sk-wrapper {
-    height: 97% !important;
+    height: 100% !important;
     top: 0 !important;
 }
-
 
 #sk-holder #sk-container #sk-header .fa {
     display: none;
@@ -13,8 +12,13 @@
     cursor: auto !important;
 }
 
-#sk-footer form { -webkit-touch-callout: none !important; }
-#sk-footer form a { -webkit-user-select: initial !important; }
+#sk-footer form {
+    -webkit-touch-callout: none !important;
+}
+
+#sk-footer form a {
+    -webkit-user-select: initial !important;
+}
 
 .screens .screen.layouticon a, .screens .layoutgrid .layouticon {
     height: 59px !important;
@@ -24,59 +28,83 @@
 /*// To recolor bubbles to orange*/
 
 /*#sk-holder #sk-container #sk-conversation .sk-row.sk-right-row .sk-msg{*/
-    /*background-color: #ff3333 !important;*/
+/*background-color: #ff3333 !important;*/
 /*}*/
-   /*#sk-container #sk-wrapper .sk-row .sk-left-row .sk-msg {*/
-       /*background-color: #ff3333 !important;*/
-   /*}*/
+/*#sk-container #sk-wrapper .sk-row .sk-left-row .sk-msg {*/
+/*background-color: #ff3333 !important;*/
+/*}*/
 /*#sk-holder #sk-container #sk-conversation .sk-row.sk-right-row .sk-msg::after {*/
-    /*border-left-color: #ff3333 !important;*/
+/*border-left-color: #ff3333 !important;*/
 /*}*/
 /*#sk-container #sk-wrapper .sk-msg {*/
-    /*background-color: #ff3333 !important;*/
+/*background-color: #ff3333 !important;*/
 /*}*/
 /*#sk-container #sk-wrapper .sk-msg::after {*/
-    /*border-left-color: #ff3333 !important;*/
+/*border-left-color: #ff3333 !important;*/
 /*}*/
-.color-5d8aa8{
+.color-5d8aa8 {
     background-color: #5d8aa8 !important;
 }
-.color-007fff{
+
+.color-007fff {
     background-color: #007fff !important;
 }
-.color-5d8aa8::after{
+
+.color-5d8aa8::after {
     border-left-color: #5d8aa8 !important;
 }
-.color-007fff::after{
+
+.color-007fff::after {
     border-left-color: #007fff !important;
 }
-.color-9966cc{
+
+.color-9966cc {
     background-color: #9966cc !important;
 }
-.color-9966cc::after{
+
+.color-9966cc::after {
     border-left-color: #9966cc !important;
 }
-.color-98777b{
+
+.color-98777b {
     background-color: #98777b !important;
 }
-.color-98777b::after{
+
+.color-98777b::after {
     border-left-color: #98777b !important;
 }
-.color-a4c639{
+
+.color-a4c639 {
     background-color: #a4c639 !important;
 }
-.color-a4c639::after{
+
+.color-a4c639::after {
     border-left-color: #a4c639 !important;
 }
-.color-e52b50{
+
+.color-e52b50 {
     background-color: #e52b50 !important;
 }
-.color-e52b50::after{
+
+.color-e52b50::after {
     border-left-color: #e52b50 !important;
 }
-.color-e32636{
+
+.color-e32636 {
     background-color: #e32636 !important;
 }
-.color-e32636::after{
+
+.color-e32636::after {
     border-left-color: #e32636 !important;
+}
+
+/* For IOS input focus issue
+*/
+
+input[type=text] {
+    -webkit-user-select: auto !important;
+    -khtml-user-select: auto !important;
+    -moz-user-select: auto !important;
+    -ms-user-select: auto !important;
+    user-select: auto !important;
 }
